--- a/16. 리덕스를 사용해 리엑트 애플리케이션 상태 관리하기/reduxapp/package.json
+++ b/16. 리덕스를 사용해 리엑트 애플리케이션 상태 관리하기/reduxapp/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "immer": "^7.0.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
